--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-hello world
+<!DOCTYPE html>
+<!-- Created By CodingNepal -->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Portfolio Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+
+</head>
+<body>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
+    <nav class="navbar">
+        <div class="max-width">
+            <ul class="menu">
+                <li><a href="index.html" class="menu-btn">EN</a></li>
+<!--                <li><a href="index-ch.html" class="menu-btn">中文(still working on/正在编辑)</a></li>-->
+            </ul>
+            <ul class="menu">
+                <li><a href="https://github.com/neptunetang" class="menu-btn">Github<img src="images/GitHub-Mark-Light-32px.png" alt="github"></a></li>
+
+                <li><a href="https://www.linkedin.com/in/ruixin-tang-b6558b128/" class="menu-btn">LinkedIn <img src="images/linkedin.png" alt="github"></a></li>
+
+            </ul>
+        </div>
+    </nav>
+
+    <!-- home section start -->
+    <section class="home" id="home">
+      <div class="max-width">
+          <div class="row">
+            <div class="home-content">
+                <div class="text-1">Hello, my name is</div>
+                <div class="text-2"><span class="typing"></span></div>
+            </div>
+          </div>
+      </div>
+    </section>
+
+    <!-- about section start -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="" alt="MY PHOTO">
+                </div>
+                <div class="column right">
+                    <div class="text">I'm Ruixin</div>
+                    <p>SOMETHING TO BE FINISHED</p>
+<!--                    <a href="#">Download CV</a>-->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="script.js"></script>
+</body>
+</html>
