add education section, change the home page background image

--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
+            <div class="logo"><a href="#">Ruixin<span>.</span></a></div>
             <ul class="menu">
-                <li><a href="index.html" class="menu-btn">EN</a></li>
-<!--                <li><a href="index-ch.html" class="menu-btn">中文(still working on/正在编辑)</a></li>-->
+                <li><a href="#home" class="menu-btn">Home</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#education" class="menu-btn">Education</a></li>
             </ul>
             <ul class="menu">
-                <li><a href="https://github.com/neptunetang" class="menu-btn">Github<img src="images/GitHub-Mark-Light-32px.png" alt="github"></a></li>
-
-                <li><a href="https://www.linkedin.com/in/ruixin-tang-b6558b128/" class="menu-btn">LinkedIn <img src="images/linkedin.png" alt="github"></a></li>
+                <li><a href="https://github.com/neptunetang" class="menu-btn"><img src="images/GitHub-Mark-Light-32px.png" alt="github"></a></li>
+                <li><a href="https://www.linkedin.com/in/ruixin-tang-b6558b128/" class="menu-btn"><img src="images/linkedin.png" alt="github"></a></li>
 
             </ul>
         </div>
@@ -38,7 +39,8 @@
       <div class="max-width">
           <div class="row">
             <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
+                <div class="text-1">Hello!</div>
+                <div class="text-3"><span class="typing1"</span></div>
                 <div class="text-2"><span class="typing"></span></div>
             </div>
           </div>
@@ -58,6 +60,32 @@
                     <p>SOMETHING TO BE FINISHED</p>
 <!--                    <a href="#">Download CV</a>-->
                 </div>
+            </div>
+        </div>
+    </section>
+
+        <!-- services section start -->
+    <section class="education" id="education">
+        <div class="max-width">
+            <h2 class="title">Education</h2>
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-book"></i>
+                        <div class="text">Eindhoven University of Technology</div>
+                        <p>Master of Data Science&Engineering</p>
+                        <p>2020.9 - now</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-book"></i>
+                        <div class="text">Vrije Universiteit Amsterdam</div>
+                        <p>Bachelor of Computer Science</p>
+                        <p>2017.9 - 2020.8</p>
+                    </div>
+                </div>
+               </div>
             </div>
         </div>
     </section>
