--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#education" class="menu-btn">Education</a></li>
-                <li><a href="#volunteer" class="menu-btn">Volunteer</a></li>
+                <li><a href="#education" class="menu-btn">Experience</a></li>
+                <!-- <li><a href="#volunteer" class="menu-btn">Volunteer</a></li> -->
                 <li><a href="vcp_project/index.html">Project</a></li>
 
             </ul>
@@ -75,8 +75,7 @@
                 <div class="column right">
                     <div class="text">Hi there, my name is Ruixin. </div>
                     <p>I would describe myself as a tech-lover, a person who is eager to see different up-to-date new technology applying into practice. <br>
-                    I am currently diving into the data analysis field and would like to learn more about the career as a Data Analyst in the future.<br>
-                    Learning Matlab and R as well as polishing my Python skills in progress.</p>
+                    I am currently diving into the data analysis field and would like to learn more about the career as a Data Analyst in the future.</p>
                     <a href="document/CV_Tang.pdf">Download CV</a>
                 </div>
             </div>
@@ -86,8 +85,27 @@
         <!-- services section start -->
     <section class="education" id="education">
         <div class="max-width">
-            <h2 class="title">Education</h2>
+            <h2 class="title">Experience</h2>
+
             <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-magic"></i>
+                        <div class="text">Data Insights Graduation Project</div>
+                        <p>Philips, Best</p>
+                        <p>Data-driven approach to clinical log from Philips iXR system.</p>
+                        <p>2022.4 - Now</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-eye"></i>
+                        <div class="text">Data Analyst</div>
+                        <p>Unilever Food Innovation Center, Wageningen</p>
+                        <p>Analyze the possible reason from recipes for powder caking.</p>
+                        <p>2021.9 - 2021.2</p>
+                    </div>
+                </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-book"></i>
@@ -108,8 +126,6 @@
             </div>
         </div>
     </section>
-
-    <a href="vcp_project/index.html">Project</a>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
