add new 'project'  section, update working experience

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#education" class="menu-btn">Experience</a></li>
                 <!-- <li><a href="#volunteer" class="menu-btn">Volunteer</a></li> -->
-                <li><a href="vcp_project/index.html">Project</a></li>
+                <li><a href="#Project">Project</a></li>
 
             </ul>
             <ul class="menu">
@@ -90,18 +90,27 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
+                        <i class="fas fa-book"></i>
+                        <div class="text">Junior consultant/engineer</div>
+                        <p>Capgemini Engineering, Eindhoven, The Netherlands</p>
+                        <p>Young talent in Technical Application Development</p>
+                        <p>2022.12 - Now</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <i class="fas fa-magic"></i>
-                        <div class="text">Data Insights Graduation Project</div>
-                        <p>Philips, Best</p>
+                        <div class="text">Data Insights Master Thesis</div>
+                        <p>Philips, Best, The Netherlands</p>
                         <p>Data-driven approach to clinical log from Philips iXR system.</p>
-                        <p>2022.4 - Now</p>
+                        <p>2022.4 - 2022.10</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-eye"></i>
-                        <div class="text">Data Analyst</div>
-                        <p>Unilever Food Innovation Center, Wageningen</p>
+                        <div class="text">Data Analyst internship</div>
+                        <p>Unilever Hive, Wageningen, The Netherlands</p>
                         <p>Analyze the possible reason from recipes for powder caking.</p>
                         <p>2021.9 - 2021.2</p>
                     </div>
@@ -110,20 +119,42 @@
                     <div class="box">
                         <i class="fas fa-book"></i>
                         <div class="text">Eindhoven University of Technology</div>
-                        <p>Master of Data Science&Engineering</p>
-                        <p>2020.9 - now</p>
+                        <p>Eindhoven, The Netherlands</p>
+                        <p>Master of Data Science in Engineering</p>
+                        <p>2020.9 - 2022.10</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-book"></i>
                         <div class="text">Vrije Universiteit Amsterdam</div>
+                        <p>Amsterdam, The Netherlands</p>
                         <p>Bachelor of Computer Science</p>
-                        <p>2017.9 - 2020.8</p>
+                        <p>2017.9 - 2020.7</p>
                     </div>
                 </div>
+
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-book"></i>
+                        <div class="text">南京中医药大学</div>
+                        <p>Nanjing, China</p>
+                        <p>Bachelor of Computer Science and Technology</p>
+                        <p>2016.9 - 2017.6</p>
+                    </div>
+                </div>
+
                </div>
             </div>
+        </div>
+    </section>
+
+    <!-- about section start -->
+    <section class="Project" id="Project">
+        <div class="max-width">
+            <h2 class="title">Demonstrative project</h2>
+            <p>working in progress</p>
+            <p><a href="vcp_project/index.html">visualization project covid demo</a></p>
         </div>
     </section>
 
