update linkedin url

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </ul>
             <ul class="menu">
                 <li><a href="https://github.com/neptunetang" class="menu-btn"><img src="images/GitHub-Mark-Light-32px.png" alt="github"></a></li>
-                <li><a href="https://www.linkedin.com/in/ruixin-tang-b6558b128/" class="menu-btn"><img src="images/linkedin.png" alt="github"></a></li>
+                <li><a href="https://www.linkedin.com/in/ruixintang/" class="menu-btn"><img src="images/linkedin.png" alt="github"></a></li>
 
             </ul>
         </div>
