add new section

--- a/vcp_project/index.html
+++ b/vcp_project/index.html
@@ -19,6 +19,7 @@
     <!-- Burger menu -->
     <button class="navbar-toggler mr-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
+       
      </button>
 
      <!-- Branding -->
@@ -92,7 +93,7 @@
           <a href="designer.html" type="button" class="btn btn-secondary p-3" >
             <i class="fas fa-sliders-h"></i> Configure
           </a>
-          <p class="py-2 px-3"><a href="#" class="link-secondary">Need help?</a></p>
+          <!-- <p class="py-2 px-3"><a href="#" class="link-secondary">Need help?</a></p> -->
         </div>
       </div>
     </div>
