--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 
@@ -39,8 +39,8 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#education" class="menu-btn">Experience</a></li>
-                <!-- <li><a href="#volunteer" class="menu-btn">Volunteer</a></li> -->
                 <li><a href="#Project">Project</a></li>
+                <li><a href="#Fun">Fun fact</a></li>
 
             </ul>
             <ul class="menu">
@@ -74,9 +74,9 @@
                 </div>
                 <div class="column right">
                     <div class="text">Hi there, my name is Ruixin. </div>
-                    <p>I would describe myself as a tech-lover, a person who is eager to see different up-to-date new technology applying into practice. <br>
-                    I am currently diving into the data analysis field and would like to learn more about the career as a Data Analyst in the future.</p>
-                    <a href="document/CV_Tang.pdf">Download CV</a>
+                    <p>I have a background Master of Data Science in Engineering at TU Eindhoven, my master's thesis is a data-driven approach for reproducing use scenarios using machine logs. I did my Bachelor of Computer Science at VU Amsterdam. <br>
+                        My colleagues and supervisors describe me as 'the sunshine from the south'. I feel excited when facing unstructured puzzles because I love finding inner links, making connections, and discovering insights from different resources.</p>
+                    <a href="document/CV_RTang.pdf">Download CV</a>
                 </div>
             </div>
         </div>
@@ -86,6 +86,7 @@
     <section class="education" id="education">
         <div class="max-width">
             <h2 class="title">Experience</h2>
+            
 
             <div class="serv-content">
                 <div class="card">
@@ -153,8 +154,17 @@
     <section class="Project" id="Project">
         <div class="max-width">
             <h2 class="title">Demonstrative project</h2>
-            <p>working in progress</p>
+            
             <p><a href="vcp_project/index.html">visualization project covid demo</a></p>
+        </div>
+
+
+    </section>
+
+    <section class="education" id="Fun">
+        <div class="max-width">
+            <h2 class="title">Fun fact about me</h2>
+
         </div>
     </section>
 
