fix download text not consistent issue

--- a/index.html
+++ b/index.html
@@ -184,10 +184,13 @@
                                         <h5>Process mining, Philips Healthcare</h5>
 
                                         <div class="cta">
-                                            <a href="https://youtu.be/kRUHzIvjOwk" target="_blank">Data-driven Approach for Reproducing Use Scenario Using Machine Logs (video demostration)</a>
+                                            <a href="https://youtu.be/kRUHzIvjOwk" target="_blank">Data-driven Approach for Reproducing Use Scenario Using Machine Logs</a>
                                         </div>
 
                                         <p>Given an event log from a human-computer interaction system, how can the efficiency of the traditional user behavior study be improved by an integrated representation of information in temporal and spatial dimensions?</p>
+                                        <div class="cta1">
+                                        <a href="https://youtu.be/kRUHzIvjOwk" target="_blank">Video demostration</a>
+                                      </div>
                                     </div>
                                 </div>
 
@@ -223,8 +226,12 @@
                                         <p>This is done by a group of 3 persons. It is an interactive tool to provide a visualization for shop owners and policymakers to show the
                                           spread and the influence of COVID-19 in a supermarket.</p>
 
+                                        <div class="cta1">
                                         <a href="vcp_project/index.html" target="_blank">Web demostration</a>
+                                        <br>
+                                        <br>
                                         <a href="document/2IMV10_Group14b-Report-1.pdf">Download report</a>
+                                      </div>
 
                                     </div>
                                 </div>
@@ -244,9 +251,12 @@
 
                                         <p>This is done by a group of 3 persons. An interactive tool is built to visualize the COVID-19 data in South Korea. With this tool, users can have multiple views about the evolution of the virus, and carry on exploratory analysis using the interactions with ease.</p>
 
-                                        <br>
+                                        <div class="cta1">
                                         <a href="https://youtu.be/vxYq8qE7kO8" target="_blank">Video demostration</a>
+                                        <br>
+                                        <br>
                                         <a href="document/2IMV20_Assign2_InfoVis_Group14.pdf">Download report</a>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -264,9 +274,9 @@
 
                                         <p>This is done by a group of 3 persons. This project discusses the potential relationship between sound, flavor, and emotion;
                                         how crispy sound intervenes in people's choice of snack, and whether sound intervention can help relieve mental stress.</p>
-
+                                        <div class="cta1">
                                         <a href="document/Team10mood pictorial.pdf">Download report</a>
-
+                                        </div>
                                     </div>
                                 </div>
 
