--- a/index.html
+++ b/index.html
@@ -379,6 +379,58 @@
 
                                                         <div class="work-item slick-slide">
                                                             <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/Jan.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Memory</h5>
+                                                                    <h4>With my supervisor at Unilever I</h4>
+                                                                    <span><span>Philips Insights team</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/mridula.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Memory</h5>
+                                                                    <h4>With my supervisor at Unilever II</h4>
+                                                                    <span><span>Hive</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/skate.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Memory</h5>
+                                                                    <h4>With my friends for ice-skating</h4>
+                                                                    <span><span>Rotterdam, The Netherlands</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/animalcrossing.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Memory</h5>
+                                                                    <h4>New year 2022</h4>
+                                                                    <span><span>Animal crossing</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
                                                                 <img class="has-top-bottom" src="images/opera.jpg"
                                                                     alt="">
                                                                 <div class="item-border"></div>
@@ -418,6 +470,58 @@
 
                                                         <div class="work-item slick-slide">
                                                             <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/op.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Game</h5>
+                                                                    <h4>Completion on Octopath traveller</h4>
+                                                                    <span><span>jRPG</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/zelda.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Game</h5>
+                                                                    <h4>The GAME I am waiting for</h4>
+                                                                    <span><span>Zelda Tears of the Kingdom</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/pingpong.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Memory</h5>
+                                                                    <h4>Kirby cup made by Levi</h4>
+                                                                    <span><span>Best, The Netherlands</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/chun.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Memory</h5>
+                                                                    <h4>Spring festival</h4>
+                                                                    <span><span>2023</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
                                                                 <img class="has-top-bottom" src="images/gaoda.jpg"
                                                                     alt="">
                                                                 <div class="item-border"></div>
@@ -425,6 +529,19 @@
                                                                     <h5 class="cat">Robot</h5>
                                                                     <h4>It's me in the GUNDAM!</h4>
                                                                     <span><span>TU Eindhoven</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/cosplay.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Cosplay</h5>
+                                                                    <h4>Long time ago with my friends for the King's avatar</h4>
+                                                                    <span><span>Nanjing, China</span></span>
                                                                 </div>
                                                             </a>
                                                         </div>
