add audio of my name

--- a/index.html
+++ b/index.html
@@ -91,9 +91,12 @@
                     <img src="images/photo2.jpg" alt="MY PHOTO">
                 </div>
                 <div class="column right">
-                    <div class="text">Hi there, my name is Ruixin. </div>
-                    <p>I have a background Master of Data Science in Engineering at TU Eindhoven, my master's thesis is a data-driven approach for reproducing use scenarios using machine logs. I did my Bachelor of Computer Science at VU Amsterdam. <br>
-                        My colleagues and supervisors describe me as 'the sunshine from the south'. I feel excited when facing unstructured puzzles because I love finding inner links, making connections, and discovering insights from different resources.</p>
+                    <audio controls>
+                        <source src="myname.mp3" type="audio/mp3">
+                    </audio>
+                    <div class="text">Hi there, my name is Ruixin. Click to hear how to say it.</div>
+                    <p> I am currently a junior consultant at Capgemini Engineering, Eindhoven based. I have a background Master of Data Science in Engineering at TU Eindhoven, my master's thesis is a data-driven approach for reproducing use scenarios using machine logs. I did my Bachelor of Computer Science at VU Amsterdam. <br>
+                        <br>My colleagues and supervisors describe me as 'the sunshine from the south'. I feel excited when facing unstructured puzzles because I love finding inner links, making connections, and discovering insights from different resources.</p>
                     <a href="document/CV_RTang.pdf">Download CV</a>
                 </div>
             </div>
