add presentation to philips's project

--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
                                         <p>Given an event log from a human-computer interaction system, how can the efficiency of the traditional user behavior study be improved by an integrated representation of information in temporal and spatial dimensions?</p>
                                         <div class="cta1">
                                         <a href="https://youtu.be/kRUHzIvjOwk" target="_blank">Video demostration</a>
+                                        <br>
+                                        <br>
+                                        <a href="document/Presentation_final_v1.pdf">Download presentation</a>
                                       </div>
                                     </div>
                                 </div>
