add more memory:)

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                                                                 </div>
                                                             </a>
                                                         </div>
-
+                                                        
                                                         <div class="work-item slick-slide">
                                                             <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
                                                                 <img class="has-top-bottom" src="images/zelda.jpeg"
@@ -547,6 +547,45 @@
                                                                 </div>
                                                             </a>
                                                         </div>
+
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/lisbon.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Birthday</h5>
+                                                                    <h4>20 to 21</h4>
+                                                                    <span><span>Lisbon, Portugal, 2019.02.25</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/zurich.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Cosplay</h5>
+                                                                    <h4>First time in a foreign country</h4>
+                                                                    <span><span>Zurich, Switzeland</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>            
+                                                        
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/csae.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Game</h5>
+                                                                    <h4>When I still play 'ingress'</h4>
+                                                                    <span><span>Nuerenburg, Germany</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>                                                        
 
                                                         <div class="work-item slick-slide">
                                                             <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
