--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
                                         <br>
                                         <br>
                                         <a href="document/Presentation_final_v1.pdf">Download presentation</a>
+                                        <br>
+                                        <br>
+                                        <a href="document/Poster_Ruixin.pdf">Download poster(eMTIC template)</a>
                                       </div>
                                     </div>
                                 </div>
