add instagram/add csae link

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 
             </ul>
             <ul class="menu">
-                <li><a href="https://github.com/neptunetang" class="menu-btn"><img src="images/GitHub-Mark-Light-32px.png" alt="github"></a></li>
-                <li><a href="https://www.linkedin.com/in/ruixintang/" class="menu-btn"><img src="images/linkedin.png" alt="github"></a></li>
+                <li><a href="https://github.com/neptunetang" class="menu-btn" target="_blank"><img src="images/GitHub-Mark-Light-32px.png" alt="GitHub"></a></li>
+                <li><a href="https://www.linkedin.com/in/ruixintang/" class="menu-btn" target="_blank"><img src="images/linkedin.png" alt="Linkedin"></a></li>
+                <li><a href="https://www.instagram.com/hanaki_hakaze/" class="menu-btn" target="_blank"><img src="images/ins.png" alt="Instagram"></a></li>
 
             </ul>
         </div>
@@ -498,7 +499,7 @@
                                                                 </div>
                                                             </a>
                                                         </div>
-                                                        
+
                                                         <div class="work-item slick-slide">
                                                             <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
                                                                 <img class="has-top-bottom" src="images/zelda.jpeg"
@@ -575,20 +576,20 @@
                                                                     <span><span>Zurich, Switzeland</span></span>
                                                                 </div>
                                                             </a>
-                                                        </div>            
-                                                        
+                                                        </div>
+
                                                         <div class="work-item slick-slide">
-                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
-                                                                <img class="has-top-bottom" src="images/csae.jpeg"
+                                                            <a href=https://csaegress.agency/ data-dsn-grid="move-up" class="effect-ajax" target="_blank">
+                                                                <img class="has-top-bottom" src="images/csae.jpg"
                                                                     alt="">
                                                                 <div class="item-border"></div>
                                                                 <div class="item-info">
                                                                     <h5 class="cat">Game</h5>
-                                                                    <h4>When I still play 'ingress'</h4>
-                                                                    <span><span>Nuerenburg, Germany</span></span>
+                                                                    <h4>When I still play 'Ingress'</h4>
+                                                                    <span><span>Click to check our website!</span></span>
                                                                 </div>
                                                             </a>
-                                                        </div>                                                        
+                                                        </div>
 
                                                         <div class="work-item slick-slide">
                                                             <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
