add Instagram link

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
                                                 <p class="title-sub">This is my life outside my job</p>
                                             </div>
                                             <h2 class="title-main">Fun facts about me</h2>
+                                            <a href="https://instagram.com/hanaki_hakaze?igshid=ZDdkNTZiNTM=">More on Instagram</a>
                                         </div>
                                     </div>
                                     <div class="container-fluid">
@@ -634,7 +635,7 @@
             <p>© 2023 version</p>
             <ul>
               <li class="image-zoom" data-dsn="parallax"><a href="https://www.linkedin.com/in/ruixintang/" target="_blank">Linkedin</a></li>
-              <li class="image-zoom" data-dsn="parallax"><a href="#">          </a></li>
+              <li class="image-zoom" data-dsn="parallax"><a href="https://instagram.com/hanaki_hakaze?igshid=ZDdkNTZiNTM=" target：=“_blank">Instagram</a></li>
               <li class="image-zoom" data-dsn="parallax"><a href="#">          </a></li>
             </ul>
         </div>
