add some new activity for this year

--- a/index.html
+++ b/index.html
@@ -189,6 +189,31 @@
                             <div class="slick-slider">
                                 <div class="item-new slick-slide">
                                     <div class="image" data-overlay="5">
+                                        <img src="images/diag.png" alt="">
+                                    </div>
+                                    <div class="content">
+                                        <div class="background"></div>
+                                        <h5>Diagnostic, TNO-ESI</h5>
+
+                                        <div class="cta">
+                                            <a href="https://youtu.be/kRUHzIvjOwk" target="_blank">Unification of two diagnostic approaches demonstration</a>
+                                        </div>
+
+                                        <p>Diagnostic demonstrator for operational diagnostics and design4diagnostics:
+                                            <br>
+                                            •	Shared model specification between two projects
+                                            <br>
+                                            •	UI of a system model editor
+                                            <br>
+                                            •	Transformation from/to two projects
+                                            </p>
+                                        <div class="cta1">
+                                        <a href="video/diagnostic demo intro.mp4" target="_blank">Video demonstration</a>
+                                      </div>
+                                    </div>
+                                </div>
+                                <div class="item-new slick-slide">
+                                    <div class="image" data-overlay="5">
                                         <img src="images/interface.png" alt="">
                                     </div>
                                     <div class="content">
@@ -201,7 +226,7 @@
 
                                         <p>Given an event log from a human-computer interaction system, how can the efficiency of the traditional user behavior study be improved by an integrated representation of information in temporal and spatial dimensions?</p>
                                         <div class="cta1">
-                                        <a href="https://youtu.be/kRUHzIvjOwk" target="_blank">Video demostration</a>
+                                        <a href="https://youtu.be/kRUHzIvjOwk" target="_blank">Video demonstration</a>
                                         <br>
                                         <br>
                                         <a href="document/Presentation_final_v1.pdf">Download presentation</a>
@@ -242,7 +267,7 @@
                                           spread and the influence of COVID-19 in a supermarket.</p>
 
                                         <div class="cta1">
-                                        <a href="vcp_project/index.html" target="_blank">Web demostration</a>
+                                        <a href="vcp_project/index.html" target="_blank">Web demonstration</a>
                                         <br>
                                         <br>
                                         <a href="document/2IMV10_Group14b-Report-1.pdf">Download report</a>
@@ -267,7 +292,7 @@
                                         <p>This is done by a group of 3 persons. An interactive tool is built to visualize the COVID-19 data in South Korea. With this tool, users can have multiple views about the evolution of the virus, and carry on exploratory analysis using the interactions with ease.</p>
 
                                         <div class="cta1">
-                                        <a href="https://youtu.be/vxYq8qE7kO8" target="_blank">Video demostration</a>
+                                        <a href="https://youtu.be/vxYq8qE7kO8" target="_blank">Video demonstration</a>
                                         <br>
                                         <br>
                                         <a href="document/2IMV20_Assign2_InfoVis_Group14.pdf">Download report</a>
@@ -314,6 +339,42 @@
                                             <div class="col-lg-9 offset-lg-3">
                                                 <div class="work-container">
                                                     <div class="slick-slider">
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/texel.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Sports</h5>
+                                                                    <h4>Outdoor skydiving</h4>
+                                                                    <span><span>Texel, The Netherlands</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/paragliding.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Sports</h5>
+                                                                    <h4>Paragliding</h4>
+                                                                    <span><span>Taormina, Italy</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/dolo.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Sports</h5>
+                                                                    <h4>Hiking</h4>
+                                                                    <span><span>Dolomites, Italy</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
                                                         <div class="work-item slick-slide">
                                                             <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
                                                                 <img class="has-top-bottom" src="images/photo1_saveforlater.jpg"
@@ -495,19 +556,6 @@
                                                                 </div>
                                                             </a>
                                                         </div>
-                                                        
-                                                        <div class="work-item slick-slide">
-                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
-                                                                <img class="has-top-bottom" src="images/zelda.jpeg"
-                                                                    alt="">
-                                                                <div class="item-border"></div>
-                                                                <div class="item-info">
-                                                                    <h5 class="cat">Game</h5>
-                                                                    <h4>The GAME I am waiting for</h4>
-                                                                    <span><span>Zelda Tears of the Kingdom</span></span>
-                                                                </div>
-                                                            </a>
-                                                        </div>
 
                                                         <div class="work-item slick-slide">
                                                             <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
@@ -627,7 +675,7 @@
             <a href="mailto:imruixintang@outlook.com" class="email image-zoom" data-dsn="parallax">imruixintang@outlook.com</a>
         </div>
         <div class="copyright-social">
-            <p>© 2023 version</p>
+            <p>© updated 12/19/2023</p>
             <ul>
               <li class="image-zoom" data-dsn="parallax"><a href="https://www.linkedin.com/in/ruixintang/" target="_blank">Linkedin</a></li>
               <li class="image-zoom" data-dsn="parallax"><a href="#">          </a></li>
